<resources>
    <string name="app_name">MeetMap</string>
    <string name="title_map">My Maps</string>
    <string name="title_chats">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="textInput_search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_registration">Регистрация</string>
    <string name="btn_authorization">Авторизация</string>
    <string name="marker_add">Marker Add !!!</string>
    <string name="familiar_add">Familiar Add !!!</string>
    <string name="settings_familiar">Settings Familiar</string>
    <string name="email">Email</string>
    <string name="nickname">Nickname</string>
    <string name="logout">Logout</string>
    <string name="et_message">Message</string>
</resources>