<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="@dimen/padding_20dp"
    android:orientation="vertical"
    tools:context=".view.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_20dp"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/settings_familiar" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nickname"
        />

    <Button
        android:id="@+id/btn_familiar_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/familiar_add"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_20dp"
        android:textSize="20sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/settings_familiar" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin_10dp"
        android:text="@string/logout"/>

</LinearLayout>